figma portfolio added

--- a/index.html
+++ b/index.html
@@ -285,6 +285,11 @@
         		<div class="gallery_f_inner row imageGallery1">
 					<iframe allowfullscreen="allowfullscreen" scrolling="no" class="fp-iframe" style="border: 1px solid lightgray; width: 100%; height: 850px;" src="https://heyzine.com/flip-book/274d5b5d1c.html"></iframe>
         		</div>
+				<br>
+				<br>
+				<div class="gallery_f_inner row imageGallery2">
+					<iframe style="border: 1px solid lightgray; width: 100%;" width="800" height="1000" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F1AoJOepeKpne8yGaHXq13z%2FUntitled%3Fpage-id%3D0%253A1%26node-id%3D2%253A2%26viewport%3D241%252C48%252C0.9%26scaling%3Dscale-down" allowfullscreen></iframe>
+        		</div>
         	</div>
         </section>
         <!--================End Home Gallery Area =================-->
