--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
 									</div>
 								</div>
 								<div class="skill_item">
+									<h4>Figma <span class="counter">75</span>%</h4>
+									<div class="progress_br">
+										<div class="progress">
+											<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+										</div>
+									</div>
+								</div>
+								<div class="skill_item">
 									<h4>Rhinoceros <span class="counter">65</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
