--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 										</div>
 										<div class="media-body">
 											<h4>Temwell Corporation</h4>
-											<p>Administrative Assistant <br />Taipei,Taiwan </p>
+											<p>Administrative Assistant <br />Taipei, Taiwan </p>
 										</div>
 									</div>
 								</li>
@@ -299,50 +299,38 @@
         		<div class="isotope_fillter">
         			<ul class="gallery_filter list">
 						<li class="active" data-filter="*"><a href="#">All</a></li>
-						<li data-filter=".product_design"><a href="#">Product Design</a></li>
-						<li data-filter=".graphic_design"><a href="#">Graphic Design</a></li>
 						<li data-filter=".uiux"><a href="#">UI/UX</a></li>
+						<li data-filter=".product_design"><a href="#">Industrial Design</a></li>
+						<!-- <li data-filter=".graphic_design"><a href="#">Graphic Design</a></li> -->
 					</ul>
         		</div>
         	</div>
         	<div class="container">
         		<div class="gallery_f_inner row imageGallery1">
-        			<div class="col-lg-4 col-md-4 col-sm-6 product_design">
+					<div class="col-lg-4 col-md-4 col-sm-6 uiux">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<a href="projects/pdesign.html" target="_blank"> <img class="img-fluid" src="projects/images/ui1_front.jpg"></a>
+								<a href="projects/images/panasonic/uiux.html" target="_blank"> <img class="img-fluid" src="projects/images/panasonic/ui1_front.jpg"></a>
         					</div>
         					<div class="g_item_text">
-        						<h4>Product Design</h4>
-        						<p style="text-align:left">
+        						<h4>Panasonic Web Redesign</h4>
+        						<!-- <p style="text-align:left">
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit
-								</p>
+								</p> -->
         					</div>
         				</div>
         			</div>
-        			<div class="col-lg-4 col-md-4 col-sm-6 graphic_design">
+					<div class="col-lg-4 col-md-4 col-sm-6 uiux">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<a href="projects/gdesign.html" target="_blank"> <img class="img-fluid" src="projects/images/ui1_front.jpg"></a>
+								<a href="projects/images/mos_burger/uiux.html" target="_blank"> <img class="img-fluid" src="projects/images/mos_burger/ui1_front.jpg"></a>
         					</div>
         					<div class="g_item_text">
-        						<h4>Graphic Design</h4>
-        						<p style="text-align:left">
+        						<h4>MOS Burger App Redesign</h4>
+								<!-- <button type="button" class="btn btn-primary" style="background-color: #05405a;">Primary</button> -->
+        						<!-- <p style="text-align:left">
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit
-								</p>
-        					</div>
-        				</div>
-        			</div>
-        			<div class="col-lg-4 col-md-4 col-sm-6 uiux">
-        				<div class="h_gallery_item">
-        					<div class="g_img_item">
-								<a href="projects/uiux.html" target="_blank"> <img class="img-fluid" src="projects/images/ui1_front.jpg"></a>
-        					</div>
-        					<div class="g_item_text">
-        						<h4>UI/UX</h4>
-        						<p style="text-align:left">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit
-								</p>
+								</p> -->
         					</div>
         				</div>
         			</div>
@@ -396,5 +384,9 @@
         <script src="vendors/counter-up/jquery.counterup.min.js"></script>
         <script src="js/mail-script.js"></script>
         <script src="js/theme.js"></script>
-    </body>
+		
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    
+	</body>
 </html>
