mos pdf design update

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 					<div class="col-lg-4 col-md-4 col-sm-6 uiux">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-								<a href="projects/images/panasonic/uiux.html" target="_blank"> <img class="img-fluid" src="projects/images/panasonic/ui1_front.jpg"></a>
+								<a href="projects/panasonic/uiux.html" target="_blank"> <img class="img-fluid" src="projects/panasonic/ui1_front.jpg"></a>
         					</div>
         					<div class="g_item_text">
         						<h4>Panasonic Web Redesign</h4>
@@ -323,7 +323,7 @@
 					<div class="col-lg-4 col-md-4 col-sm-6 uiux">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-								<a href="projects/images/mos_burger/uiux.html" target="_blank"> <img class="img-fluid" src="projects/images/mos_burger/ui1_front.jpg"></a>
+								<a href="projects/mos_burger/uiux.html" target="_blank"> <img class="img-fluid" src="projects/mos_burger/ui1_front.jpg"></a>
         					</div>
         					<div class="g_item_text">
         						<h4>MOS Burger App Redesign</h4>
