--- a/projects/mos_burger/uiux.html
+++ b/projects/mos_burger/uiux.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <img src="ui1_main.jpg">
-        <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F0LF9hGvQlDrfB9j8Rr7L39%2FMos-burger%3Fpage-id%3D0%253A1%26node-id%3D166%253A1739%26viewport%3D140%252C254%252C0.1%26scaling%3Dscale-down%26starting-point-node-id%3D2%253A2" allowfullscreen></iframe>
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F0LF9hGvQlDrfB9j8Rr7L39%2FMos-burger%3Fpage-id%3D0%253A1%26node-id%3D2%253A2%26viewport%3D-59%252C291%252C0.22%26scaling%3Dscale-down%26starting-point-node-id%3D2%253A2" allowfullscreen></iframe>
     </body>
 </html>
