--- a/index.html
+++ b/index.html
@@ -314,9 +314,6 @@
         					</div>
         					<div class="g_item_text">
         						<h4>Panasonic Web Redesign</h4>
-        						<!-- <p style="text-align:left">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit
-								</p> -->
         					</div>
         				</div>
         			</div>
@@ -327,10 +324,50 @@
         					</div>
         					<div class="g_item_text">
         						<h4>MOS Burger App Redesign</h4>
-								<!-- <button type="button" class="btn btn-primary" style="background-color: #05405a;">Primary</button> -->
-        						<!-- <p style="text-align:left">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit
-								</p> -->
+        					</div>
+        				</div>
+        			</div>
+
+
+
+
+					<div class="col-lg-4 col-md-4 col-sm-6 product_design">
+        				<div class="h_gallery_item">
+        					<div class="g_img_item">
+								<a href="projects/portable_bottle/uiux.html" target="_blank"> <img class="img-fluid" src="projects/portable_bottle/ui1_front.jpg"></a>
+        					</div>
+        					<div class="g_item_text">
+        						<h4>Portable Heating Water Bottle</h4>
+        					</div>
+        				</div>
+        			</div>
+					<div class="col-lg-4 col-md-4 col-sm-6 product_design">
+        				<div class="h_gallery_item">
+        					<div class="g_img_item">
+								<a href="projects/yi_zhen/uiux.html" target="_blank"> <img class="img-fluid" src="projects/yi_zhen/ui1_front.jpg"></a>
+        					</div>
+        					<div class="g_item_text">
+        						<h4>YI ZHEN & Loyal and Faithful</h4>
+        					</div>
+        				</div>
+        			</div>
+					<div class="col-lg-4 col-md-4 col-sm-6 product_design">
+        				<div class="h_gallery_item">
+        					<div class="g_img_item">
+								<a href="projects/blessing/uiux.html" target="_blank"> <img class="img-fluid" src="projects/blessing/ui1_front.jpg"></a>
+        					</div>
+        					<div class="g_item_text">
+        						<h4>Blessing</h4>
+        					</div>
+        				</div>
+        			</div>
+					<div class="col-lg-4 col-md-4 col-sm-6 product_design">
+        				<div class="h_gallery_item">
+        					<div class="g_img_item">
+								<a href="projects/simplicity/uiux.html" target="_blank"> <img class="img-fluid" src="projects/simplicity/ui1_front.jpg"></a>
+        					</div>
+        					<div class="g_item_text">
+        						<h4>Simplicity</h4>
         					</div>
         				</div>
         			</div>
